<resources>
    <string name="app_name">Home Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">Item Name</string>
    <string name="image_description_missing">image description missing</string>
    <string name="price">Price</string>
    <string name="a_picture_that_is_blank">A picture that is blank</string>
    <string name="name">Name</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="total_value">Total Value: $</string>
</resources>
