<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/image_description_missing"
        app:srcCompat="@drawable/ic_image_white_24dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/itemImageView"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameTextView"
        android:gravity="center"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent"
        android:textSize="17sp" />
</RelativeLayout>